--- a/lori_website/about.html
+++ b/lori_website/about.html
@@ -58,22 +58,24 @@
     <!-----------About us content ------------>
         <div class ="row">
             <div class = "about-col">
-                <h1> Hi there</h1>
+                <h1> Hi there!</h1>
                 <p> 
-					With a voice that transcends boundaries and lyrics that resonate with the soul, Lori Hubbard stands as a beacon of musical artistry. 
-					Hailing from Montauk, NY, she discovered her passion for music at an early age. She honed her craft through years of dedicated practice 
-					and soon emerged as a formidable presence in the music industry.
+					I am Lori Hubbard, a wife, a mom, a sister and a daughter of a hootenanny-er from way back. 
+					I grew up listening to all kinds of music, hearing music being played by my dad and brother 
+					and at 14 started playing guitar. In college I played small coffee houses and then played in bars 
+					in Montauk as a twenty something year old. I met my husband Jim because we were both singers and guitar p
+					layers, and we went on to not only perform together but to host countless house “jams” in our living room. 
 				</p>
 				<p>
-					Her signature blend of [mention musical style or genre] and [mention another unique element] has garnered her following. 
-					Hubbard's discography, including her own pieces named [xyz], has earned praise from [mention newspaper articles]. 
-					She have graced stages, vineyards and schools, enchanting audiences with her 
-					powerful performances. Beyond the spotlight, Lori remains dedicated to 
-					[hobbies?]. With her latest release [Latest Single], Lori continues to leave an indelible mark on the music landscape, 
-					captivating hearts and inspiring future generations of musicians.
+					Life got busy having three kids and a health food store with my sister, so most of my playing was just in 
+					the living room when the kids were little. I started going into their classrooms to sing when they started 
+					preschool and continued until they were in elementary school. As my parents started getting older I began 
+					typing up lyrics for them so that THEY could sing along in the living room jams. And now that everyone is 
+					grown up I am a full time musician- playing gigs, writing music and working all week in preschools and libraries.
 				</p>
 				<p>
-					Hubbard currently lives in Montauk with [person1], [person2] and her good boy, a golden named Toby. 
+					When I’m not holding a guitar or jumping around with kids you can find me cooking, riding a mule, hiking, doing yoga 
+					or maybe getting lost in a jig saw puzzle. And laughing. Because there is always something to laugh about!
 				</p>
                 
             </div>
