--- a/lori_website/contact.html
+++ b/lori_website/contact.html
@@ -14,7 +14,7 @@
 	<script src="https://kit.fontawesome.com/07106ea502.js" crossorigin="anonymous"></script>
 
 	<!-- Title of the document -->
-	<title>University Website Design</title>
+	<title>Lori Hubbard</title>
 	
 	<!-- Link the CSS page to the HTML page -->
 	<link href="styles.css" rel="stylesheet" />	
