--- a/lori_website/index.html
+++ b/lori_website/index.html
@@ -72,10 +72,23 @@
 	<section class="course">
 		<h1>My Services</h1>
 		<p> 
-			Experience the magic of live music like never before! <br>
-			Lori Hubbard brings an electrifying energy to any event, creating unforgettable moments for your audience. 
-			From intimate gatherings to large scale performances, she specializes in delivering a soul-stirring performance tailored to your unique vibe. 
-			Elevate your event with her live music expertise - where every note resonates, and every heart is moved. Click on the images below to learn more! 
+			<p>
+				Experience the magic of live music like never before! 
+			</p>
+			<p>
+				Lori Hubbard brings electrifying energy to any event, creating unforgettable moments for your audience. Singer, song-writer and guitar player offering a wide variety of 
+				shows and sets for restaurants, bars, coffee houses, events, fairs, seniors, sing alongs, school age children, preschoolers and babies.
+				<br>
+				From intimate gatherings to large scale performances, she specializes in delivering a soul-stirring performance tailored to your unique vibe. 
+				Elevate your event with her live music expertise - where every note resonates, and every heart is moved. 
+			
+				Lori has a big repertoire and a large base of songs and can tailor performances for all types of audiences. 
+				For “grown up” shows she is often accompanied by a pedal steel player, guitar player and/or a bassist. Kids shows are all Lori using songs, stories, finger plays and action songs. 
+			</p>
+			<p>
+				Click on the images below to learn more!
+			</p>
+			 
 		</p>
 
 			<!-- New division in the services section-->
@@ -83,7 +96,7 @@
 				<a href="services.html">
 				<!-- Miss Lori column-->
 					<div class="course-col">
-						<img src="lori_images/miss_lori.jpg">
+						<img src="lori_images/misslori_library.jpeg">
 						<!-- Layer over the image -->
 						<div class="layer">
 							<h3>MISS. LORI</h3>
@@ -158,7 +171,7 @@
 	<section class="home-contact">
 		<h1>Contact for more information</h1>
 		<!-- Add Contact us button-->
-		<a href="contact.html" class="hero-btn"> CONTACT US </a>
+		<a href="contact.html" class="hero-btn"> CONTACT LORI </a>
 	</section>
 
 
